@@ -54,11 +54,12 @@ AC_DEFUN(KDE_REPLACE_ROOT,
 
 AC_DEFUN(AC_CREATE_KFSSTND,
 [
-AC_MSG_CHECKING(for KDE paths)
 AC_REQUIRE([AC_CHECK_RPATH])
 AC_REQUIRE([AC_CHECK_BOOL])
 
 if test "$1" = "default"; then
+
+  AC_MSG_CHECKING(for KDE paths)
 
   if test -z "$kde_htmldir"; then
     kde_htmldir="\$(prefix)/share/doc/HTML"
@@ -105,6 +106,7 @@ else
 
 AC_CACHE_VAL(kde_cv_all_paths,
 [
+AC_MSG_CHECKING([for kde headers installed])
 AC_LANG_CPLUSPLUS
 cat > conftest.$ac_ext <<EOF
 #include <stdio.h>
@@ -138,14 +140,29 @@ if test -n "$qt_libraries"; then
   KDE_TEST_RPATH="$KDE_TEST_RPATH -rpath $qt_libraries $KDE_EXTRA_RPATH"
 fi
 
+ac_compile='${CXX-g++} -c $CXXFLAGS $all_includes $CPPFLAGS conftest.$ac_ext'
+if AC_TRY_EVAL(ac_compile); then
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_ERROR([your system is not able to compile a small KDE application!
+Check, if you installed the KDE header files correctly.])
+fi
+
+AC_MSG_CHECKING([for kde libraries installed])
 ac_link='/bin/sh ./libtool --mode=link ${CXX-g++} -o conftest $CXXFLAGS $all_includes $CPPFLAGS $LDFLAGS $all_libraries conftest.$ac_ext $LIBS -lkdecore -lqt -lXext -lX11 $LIBSOCKET $KDE_TEST_RPATH 1>&5'
 
-if AC_TRY_EVAL(ac_link) && test -s conftest 
-then
-  eval `./conftest 2>&5`
-  ./conftest 2> /dev/null >&5 # make an echo for config.log
-  kde_have_all_paths=yes
+if AC_TRY_EVAL(ac_link) && test -s conftest; then 
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_ERROR([your system fails at linking a small KDE application!
+Check, if your compiler is installed correctly and if you have used the
+same compiler to compile qt and kdelibs as you did use now])
 fi
+
+AC_MSG_CHECKING(for KDE paths)
+eval `./conftest 2>&5`
+./conftest 2> /dev/null >&5 # make an echo for config.log
+kde_have_all_paths=yes
 
 AC_LANG_CPLUSPLUS
 
@@ -180,7 +197,8 @@ if test -z "$kde_htmldir" || test -z "$kde_appsdir" ||
    test -z "$kde_partsdir" || test "$kde_have_all_paths" != "yes"; then
   AC_MSG_RESULT(problems)
   kde_have_all_paths=no
-  AC_MSG_ERROR([configure can not run a little KDE program to test the environment.
+  AC_MSG_ERROR([configure could not run a little KDE program to test the environment. 
+Since it had compiled and linked before, it must be a strange problem on your system.
 Look at config.log for details. If you are not able to fix this, please contact Stephan Kulow <coolo@kde.org>.])
 else
   AC_MSG_RESULT(done)
@@ -237,8 +255,35 @@ AC_DEFUN(KDE_MISC_TESTS,
    AC_CHECK_LIB(crypt, main, [LIBCRYPT="-lcrypt"]) dnl for BSD
    AC_SUBST(LIBCRYPT)
    AC_CHECK_KSIZE_T
-   dnl I need to check for libsocket before testing X
-   AC_CHECK_LIB(socket, socket, [LIBSOCKET="-lsocket -lnsl"]) dnl for Solaris
+   AC_CHECK_LIB(dnet, dnet_ntoa, [X_EXTRA_LIBS="$X_EXTRA_LIBS -ldnet"])
+   if test $ac_cv_lib_dnet_dnet_ntoa = no; then
+      AC_CHECK_LIB(dnet_stub, dnet_ntoa,
+        [X_EXTRA_LIBS="$X_EXTRA_LIBS -ldnet_stub"])
+   fi
+   AC_CHECK_FUNC(gethostbyname)
+   if test $ac_cv_func_gethostbyname = no; then
+     AC_CHECK_LIB(nsl, gethostbyname, X_EXTRA_LIBS="$X_EXTRA_LIBS -lnsl")
+   fi
+   AC_CHECK_FUNC(connect)
+   if test $ac_cv_func_connect = no; then
+      AC_CHECK_LIB(socket, connect, X_EXTRA_LIBS="-lsocket $X_EXTRA_LIBS", ,
+        $X_EXTRA_LIBS)
+   fi
+
+   AC_CHECK_FUNC(remove)
+   if test $ac_cv_func_remove = no; then
+      AC_CHECK_LIB(posix, remove, X_EXTRA_LIBS="$X_EXTRA_LIBS -lposix")
+   fi
+ 
+   # BSDI BSD/OS 2.1 needs -lipc for XOpenDisplay.
+   AC_CHECK_FUNC(shmat)
+   if test $ac_cv_func_shmat = no; then
+     AC_CHECK_LIB(ipc, shmat, X_EXTRA_LIBS="$X_EXTRA_LIBS -lipc")
+   fi
+
+   LIBSOCKET=$X_EXTRA_LIBS
+   AC_SUBST(LIBSOCKET)
+   AC_SUBST(X_EXTRA_LIBS)
    AC_CHECK_LIB(ucb, killpg, [LIBUCB="-lucb"]) dnl for Solaris2.4
    AC_SUBST(LIBUCB)
 
@@ -250,8 +295,6 @@ AC_DEFUN(KDE_MISC_TESTS,
         AC_CHECK_LIB(bsd, gethostbyname, [LIBSOCKET="-lbsd"]) dnl for LynxOS
          ;;
     esac
-
-    AC_SUBST(LIBSOCKET)
 
 ])
 
@@ -1110,10 +1153,22 @@ ac_save_cc=$CC
 ac_save_cflags=$CFLAGS
 CC=$CXX
 CFLAGS=$CXXFLAGS
-silent=yes
 AM_PROG_LIBTOOL dnl for libraries
 CC=$ac_save_cc
 CFLAGS=$ac_save_cflags
+])
+
+AC_DEFUN(KDE_DO_IT_ALL,
+[
+AC_CANONICAL_SYSTEM
+AC_ARG_PROGRAM   
+AM_DISABLE_LIBRARIES
+AM_INIT_AUTOMAKE($1, $2)
+AC_PREFIX_DEFAULT$(${KDEDIR:-/usr/local/kde})
+AC_CHECK_COMPILERS
+KDE_PROG_LIBTOOL
+AM_KDE_WITH_NLS
+AC_PATH_KDE
 ])
 
 AC_DEFUN(AC_CHECK_RPATH,
@@ -1165,6 +1220,7 @@ dnl This is a merge of some macros out of the gettext aclocal.m4
 dnl since we don't need anything, I took the things we need
 AC_DEFUN(AM_KDE_WITH_NLS,
   [AC_MSG_CHECKING([whether NLS is requested])
+    AC_LANG_CPLUSPLUS
     dnl Default is enabled NLS
     AC_ARG_ENABLE(nls,
       [  --disable-nls           do not use Native Language Support],
